@@ -1,4 +1,5 @@
 2.90 -> 2.91
+	- rename file before unlinking to avoid EBUSY failures.
 	- add callbacks for installer updates while doing URL xfers.
 	- resurrect http queries/verifies.
 	- create rpmbzio.c to avoid implicit dependence on libbz2 for installer.
